--- a/public/styles.css
+++ b/public/styles.css
@@ -550,12 +550,14 @@ main {
 }
 
 .filtres {
-  border-radius: 4px;
-  box-shadow: 0px 0px 4px gray;
   margin: 8px;
-  padding: 8px;
-  min-width: 300px;
   min-height: 400px;
+  min-width: 300px;
+  border-radius: 0.25rem;
+  padding: 8px;
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .filtres h3 {
@@ -566,7 +568,7 @@ main {
   margin: 8px;
   display: grid;
   flex: 1 1 0%;
-  grid-template-columns: repeat(3, minmax(0, 1fr));
+  grid-template-columns: repeat(4, minmax(0, 1fr));
   gap: 4px;
   border-radius: 0.25rem;
 }
@@ -577,8 +579,6 @@ main {
   --tw-border-opacity: 1;
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
   padding: 4px;
-  /* border: 1px solid black;
-	padding: 4px; */
 }
 
 .fiches article img {
