--- a/src/styles.css
+++ b/src/styles.css
@@ -1,14 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
 body {
 	max-width: 1200px;
 	margin: auto;
 	padding: 16px;
 	font-family: 'Montserrat', sans-serif;
+	background-image: url(../images/design\ \(26\).jpg);
 }
 
 header {
@@ -36,14 +36,15 @@ main {
 
 .filtres {
 
-	@apply rounded shadow-lg m-[8px] p-[8px] min-w-[300px] min-h-[400px]	
+	@apply rounded shadow-lg m-[8px] p-[8px] min-w-[300px] min-h-[400px];	
 }
 .filtres h3 {
-	@apply text-center
+	text-align: center
 }
 
 .fiches {
-	@apply flex-1 m-[8px] grid grid-cols-4 gap-[4px] rounded
+	
+	 @apply flex-1 m-[8px] grid grid-cols-4 gap-[4px] rounded bg-gradient-to-r from-blue-700 to-blue-300;
 	
 }
 .fiches article {
@@ -52,6 +53,7 @@ main {
 }
 
 .fiches article img {
+	
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
