--- a/public/styles.css
+++ b/public/styles.css
@@ -607,6 +607,75 @@ body {
   background-size: cover;
   -webkit-backdrop-filter: blur(3px);
           backdrop-filter: blur(3px);
+  --scrollbar-track: initial;
+  --scrollbar-thumb: initial;
+  --scrollbar-corner: initial;
+  --scrollbar-track-hover: var(--scrollbar-track);
+  --scrollbar-thumb-hover: var(--scrollbar-thumb);
+  --scrollbar-corner-hover: var(--scrollbar-corner);
+  --scrollbar-track-active: var(--scrollbar-track-hover);
+  --scrollbar-thumb-active: var(--scrollbar-thumb-hover);
+  --scrollbar-corner-active: var(--scrollbar-corner-hover);
+  scrollbar-color: var(--scrollbar-thumb) var(--scrollbar-track);
+  overflow: overlay;
+}
+
+body.overflow-x-hidden{
+  overflow-x: hidden;
+}
+
+body.overflow-y-hidden{
+  overflow-y: hidden;
+}
+
+body::-webkit-scrollbar-track{
+  background-color: var(--scrollbar-track);
+}
+
+body::-webkit-scrollbar-thumb{
+  background-color: var(--scrollbar-thumb);
+}
+
+body::-webkit-scrollbar-corner{
+  background-color: var(--scrollbar-corner);
+}
+
+body::-webkit-scrollbar-track:hover{
+  background-color: var(--scrollbar-track-hover);
+}
+
+body::-webkit-scrollbar-thumb:hover{
+  background-color: var(--scrollbar-thumb-hover);
+}
+
+body::-webkit-scrollbar-corner:hover{
+  background-color: var(--scrollbar-corner-hover);
+}
+
+body::-webkit-scrollbar-track:active{
+  background-color: var(--scrollbar-track-active);
+}
+
+body::-webkit-scrollbar-thumb:active{
+  background-color: var(--scrollbar-thumb-active);
+}
+
+body::-webkit-scrollbar-corner:active{
+  background-color: var(--scrollbar-corner-active);
+}
+
+body{
+  scrollbar-width: thin;
+}
+
+body::-webkit-scrollbar{
+  width: 8px;
+  height: 8px;
+}
+
+body{
+  --scrollbar-track: #e2e8f0;
+  --scrollbar-thumb: #cbd5e1;
 }
 
 header {
@@ -642,8 +711,6 @@ main {
 .filtres{
   margin: 8px;
   max-height: 550px;
-  min-height: 400px;
-  min-width: 300px;
   overflow-y: hidden;
   border-radius: 0.25rem;
   --tw-bg-opacity: 1;
@@ -658,20 +725,88 @@ main {
   overflow-y: hidden;
 }
 
+.filtres{
+  --scrollbar-track: initial;
+  --scrollbar-thumb: initial;
+  --scrollbar-corner: initial;
+  --scrollbar-track-hover: var(--scrollbar-track);
+  --scrollbar-thumb-hover: var(--scrollbar-thumb);
+  --scrollbar-corner-hover: var(--scrollbar-corner);
+  --scrollbar-track-active: var(--scrollbar-track-hover);
+  --scrollbar-thumb-active: var(--scrollbar-thumb-hover);
+  --scrollbar-corner-active: var(--scrollbar-corner-hover);
+  scrollbar-color: var(--scrollbar-thumb) var(--scrollbar-track);
+  overflow: overlay;
+}
+
+.filtres.overflow-x-hidden{
+  overflow-x: hidden;
+}
+
+.filtres.overflow-y-hidden{
+  overflow-y: hidden;
+}
+
 .scrollbar-thin.filtres{
   overflow-y: hidden;
 }
 
-.filtres::-webkit-scrollbar{
-  width: 7px;
-}
-
 .filtres::-webkit-scrollbar-track{
-  background: white;
+  background-color: var(--scrollbar-track);
 }
 
 .filtres::-webkit-scrollbar-thumb{
-  background: red;
+  background-color: var(--scrollbar-thumb);
+}
+
+.filtres::-webkit-scrollbar-corner{
+  background-color: var(--scrollbar-corner);
+}
+
+.filtres::-webkit-scrollbar-track:hover{
+  background-color: var(--scrollbar-track-hover);
+}
+
+.filtres::-webkit-scrollbar-thumb:hover{
+  background-color: var(--scrollbar-thumb-hover);
+}
+
+.filtres::-webkit-scrollbar-corner:hover{
+  background-color: var(--scrollbar-corner-hover);
+}
+
+.filtres::-webkit-scrollbar-track:active{
+  background-color: var(--scrollbar-track-active);
+}
+
+.filtres::-webkit-scrollbar-thumb:active{
+  background-color: var(--scrollbar-thumb-active);
+}
+
+.filtres::-webkit-scrollbar-corner:active{
+  background-color: var(--scrollbar-corner-active);
+}
+
+.filtres{
+  scrollbar-width: thin;
+}
+
+.filtres::-webkit-scrollbar{
+  width: 8px;
+  height: 8px;
+}
+
+.filtres{
+  --scrollbar-track: #fff;
+  --scrollbar-thumb: #cbd5e1;
+}
+
+.filtres::-webkit-scrollbar-thumb{
+  border-radius: 0.5rem;
+}
+
+.fiches::-webkit-scrollbar-thumb{
+  border-radius: 50px;
 }
 
 .filtres h3 {
@@ -687,9 +822,6 @@ main {
   gap: 4px;
   overflow-y: hidden;
   border-radius: 0.25rem;
-  --tw-bg-opacity: 1;
-  background-color: rgb(248 250 252 / var(--tw-bg-opacity));
-  padding: 1rem;
 }
 
 .scrollbar.fiches{
@@ -768,11 +900,13 @@ main {
 }
 
 .fiches{
-  --scrollbar-track: #cbd5e1;
-  --scrollbar-thumb: #94a3b8;
+  --scrollbar-track: #93c5fd;
+  --scrollbar-thumb: #cbd5e1;
 }
 
 .fiches article{
+  max-height: 356px;
+  max-width: 197px;
   border-radius: 0.25rem;
   padding: 4px;
   --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
