--- a/public/styles.css
+++ b/public/styles.css
@@ -602,80 +602,12 @@ body {
   margin: auto;
   padding: 16px;
   font-family: 'Montserrat', sans-serif;
-  background-image: url(../images/design\ \(75\).jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  -webkit-backdrop-filter: blur(3px);
-          backdrop-filter: blur(3px);
-  --scrollbar-track: initial;
-  --scrollbar-thumb: initial;
-  --scrollbar-corner: initial;
-  --scrollbar-track-hover: var(--scrollbar-track);
-  --scrollbar-thumb-hover: var(--scrollbar-thumb);
-  --scrollbar-corner-hover: var(--scrollbar-corner);
-  --scrollbar-track-active: var(--scrollbar-track-hover);
-  --scrollbar-thumb-active: var(--scrollbar-thumb-hover);
-  --scrollbar-corner-active: var(--scrollbar-corner-hover);
-  scrollbar-color: var(--scrollbar-thumb) var(--scrollbar-track);
-  overflow: overlay;
-}
-
-body.overflow-x-hidden{
-  overflow-x: hidden;
-}
-
-body.overflow-y-hidden{
-  overflow-y: hidden;
-}
-
-body::-webkit-scrollbar-track{
-  background-color: var(--scrollbar-track);
-}
-
-body::-webkit-scrollbar-thumb{
-  background-color: var(--scrollbar-thumb);
-}
-
-body::-webkit-scrollbar-corner{
-  background-color: var(--scrollbar-corner);
-}
-
-body::-webkit-scrollbar-track:hover{
-  background-color: var(--scrollbar-track-hover);
-}
-
-body::-webkit-scrollbar-thumb:hover{
-  background-color: var(--scrollbar-thumb-hover);
-}
-
-body::-webkit-scrollbar-corner:hover{
-  background-color: var(--scrollbar-corner-hover);
-}
-
-body::-webkit-scrollbar-track:active{
-  background-color: var(--scrollbar-track-active);
-}
-
-body::-webkit-scrollbar-thumb:active{
-  background-color: var(--scrollbar-thumb-active);
-}
-
-body::-webkit-scrollbar-corner:active{
-  background-color: var(--scrollbar-corner-active);
-}
-
-body{
-  scrollbar-width: thin;
-}
-
-body::-webkit-scrollbar{
-  width: 8px;
-  height: 8px;
-}
-
-body{
-  --scrollbar-track: #e2e8f0;
-  --scrollbar-thumb: #cbd5e1;
+  /* background-image: url(../images/design\ \(75\).jpg); */
+  /* background-repeat: no-repeat;
+	background-size: cover; */
+  --tw-bg-opacity: 1;
+  background-color: rgb(30 30 42 / var(--tw-bg-opacity));
+  opacity: 0.9;
 }
 
 header {
